--- a/index.html
+++ b/index.html
@@ -1,207 +1,207 @@
 <!DOCTYPE html>
 <html lang="ko">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>김은진 개인포트폴리오</title>
-        <link rel="stylesheet" href="css/reset.css" />
-        <link rel="stylesheet" href="css/index.css" />
-        <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
-            integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
-            crossorigin="anonymous"
-            referrerpolicy="no-referrer"
-        />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>개인포트폴리오</title>
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/index.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
-        <script src="js/jquery-3.7.1.min.js"></script>
-        <script src="js/splitting.min.js"></script>
-        <script src="js/index.js"></script>
+    <script src="js/jquery-3.7.1.min.js"></script>
+    <script src="js/splitting.min.js"></script>
+    <script src="js/index.js"></script>
 
-        <!-- 헤더 메뉴 글자체 -->
-        <link
-            href="https://fonts.googleapis.com/css2?family=Anton&family=Jua&family=Noto+Sans+KR:wght@500&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
-            rel="stylesheet"
-        />
-        <!-- 비주얼 글자체 -->
-        <link
-            href="https://fonts.googleapis.com/css2?family=Anton&family=Jua&family=Noto+Sans+KR:wght@500&display=swap"
-            rel="stylesheet"
-        />
-    </head>
-    <body>
-        <header>
-            <h1>
-                <a href="index.html"><img src="img/logo.png" /></a>
-            </h1>
-            <ul>
-                <li><a href="#" data-splitting>PROFILE</a></li>
-                <li><a href="#" data-splitting>PORTFOLIO</a></li>
-                <li><a href="#" data-splitting>CONTACT</a></li>
-            </ul>
-        </header>
-        <div id="visual">
-            <div class="txt1">
-                <h2>EUNJINOVATOR</h2>
-                <h4>새로운 아이디어, 새로운 방법을 실행하는 김은진 입니다</h4>
+    <!-- 헤더 메뉴 글자체 -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anton&family=Jua&family=Noto+Sans+KR:wght@500&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
+    <!-- 비주얼 글자체 -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anton&family=Jua&family=Noto+Sans+KR:wght@500&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header>
+      <h1>
+        <a href="index.html"><img src="img/logo.png" /></a>
+      </h1>
+      <ul>
+        <li><a href="#" data-splitting>PROFILE</a></li>
+        <li><a href="#" data-splitting>PORTFOLIO</a></li>
+        <li><a href="#" data-splitting>CONTACT</a></li>
+      </ul>
+    </header>
+    <div id="visual">
+      <div class="txt1">
+        <h2>EUNJINOVATOR</h2>
+        <h4>새로운 아이디어, 새로운 방법을 실행하는 김은진 입니다</h4>
+      </div>
+    </div>
+    <div id="container">
+      <section id="profile">
+        <ul class="wrap">
+          <li>
+            <h3>PROFILE</h3>
+            <img src="img/me.png" />
+            <h3>
+              안녕하세요. 꾸준히 성장하는<br />
+              웹 퍼블리셔 <span>김은진</span> 입니다
+            </h3>
+          </li>
+          <li>
+            <h4>Introduce</h4>
+            <p>2002.07.31</p>
+            <p>010-2289-0459</p>
+            <p>kimeunjin02@naver.com</p>
+            <h4>Education</h4>
+            <p>2024/12 MBC아카데미컴퓨터학원 수료</p>
+            <p>2021/01 목동고등학교 졸업</p>
+            <p>2020~2021 은평문화예술정보학교 졸업</p>
+            <p>2019~2020 명지전문대학교 토탈미용 수료</p>
+            <h4>License</h4>
+            <p>2024/09 GTQ 1급</p>
+          </li>
+          <li>
+            <h4>Career</h4>
+            <p>2024~ing 빌리엔젤 당산역점</p>
+            <p>2023~2024 나이키 롯데김포공항점</p>
+            <p>2022~2023 천사곱창 마곡나루점</p>
+            <p>2021~2022 이미그로서리키친 여의도점</p>
+            <p>2020~2021 두끼 오목교점</p>
+            <p>2019~2020 버거킹 목동점</p>
+            <h4>Skills</h4>
+            <div class="profile_skill">
+              <ul>
+                <li class="skil1">Ai</li>
+                <li class="skil2">Ps</li>
+              </ul>
+              <ul>
+                <li class="skil3">Html</li>
+                <li class="skil4">Css</li>
+                <li class="skil5">Js</li>
+              </ul>
             </div>
+          </li>
+        </ul>
+      </section>
+      <section id="portfolio1">
+        <div class="por1">
+          <h2>HERA<br />웹 디자인</h2>
+          <h3>HERA web design</h3>
         </div>
-        <div id="container">
-            <section id="profile">
-                <ul class="wrap">
-                    <li>
-                        <h3>PROFILE</h3>
-                        <img src="img/me.png" />
-                        <h3>
-                            안녕하세요. 꾸준히 성장하는<br />
-                            웹 퍼블리셔 <span>김은진</span> 입니다
-                        </h3>
-                    </li>
-                    <li>
-                        <h4>Introduce</h4>
-                        <p>2002.07.31</p>
-                        <p>010-2289-0459</p>
-                        <p>kimeunjin02@naver.com</p>
-                        <h4>Education</h4>
-                        <p>2024/12 MBC아카데미컴퓨터학원 수료</p>
-                        <p>2021/01 목동고등학교 졸업</p>
-                        <p>2020~2021 은평문화예술정보학교 졸업</p>
-                        <p>2019~2020 명지전문대학교 토탈미용 수료</p>
-                        <h4>License</h4>
-                        <p>2024/09 GTQ 1급</p>
-                    </li>
-                    <li>
-                        <h4>Career</h4>
-                        <p>2024~ing 빌리엔젤 당산역점</p>
-                        <p>2023~2024 나이키 롯데김포공항점</p>
-                        <p>2022~2023 천사곱창 마곡나루점</p>
-                        <p>2021~2022 이미그로서리키친 여의도점</p>
-                        <p>2020~2021 두끼 오목교점</p>
-                        <p>2019~2020 버거킹 목동점</p>
-                        <h4>Skills</h4>
-                        <div class="profile_skill">
-                            <ul>
-                                <li class="skil1">Ai</li>
-                                <li class="skil2">Ps</li>
-                            </ul>
-                            <ul>
-                                <li class="skil3">Html</li>
-                                <li class="skil4">Css</li>
-                                <li class="skil5">Js</li>
-                            </ul>
-                        </div>
-                    </li>
-                </ul>
-            </section>
-            <section id="portfolio1">
-                <div class="por1">
-                    <h2>HERA<br />웹 디자인</h2>
-                    <h3>HERA web design</h3>
-                </div>
-                <div class="view1">
-                    <p><a href="">홈페이지 보러가기</a></p>
-                </div>
-                <div class="por1_1">
-                    <h4>+ USED PROGRAM</h4>
-                    <img src="img/psicon.png" />
-                    <img src="img/aiicon.png" />
-                    <img src="img/vscicon.png" />
-                    <h4>+ ABOUT</h4>
-                    <p>
-                        코스메틱브랜드 <헤라>의 브랜드 컬러를 살려 심플한
-                        스타일로 <br />홈페이지 및 상세페이지를 구현했습니다.
-                    </p>
-                </div>
-                <div class="monitor1">
-                    <img src="img/monitor1.svg" />
-                    <div class="moni_1">
-                        <p>소요시간: 4h</p>
-                        <p>작업성격: 개인작업</p>
-                        <p>기여도: 100%</p>
-                    </div>
-                </div>
-            </section>
-            <section id="portfolio2">
-                <div class="por2">
-                    <h2>HERA<br />웹 디자인</h2>
-                    <h3>HERA web design</h3>
-                </div>
-                <div class="view2">
-                    <p><a href="">홈페이지 보러가기</a></p>
-                </div>
-                <div class="por2_1">
-                    <h4>+ USED PROGRAM</h4>
-                    <img src="img/psicon.png" />
-                    <img src="img/aiicon.png" />
-                    <img src="img/vscicon.png" />
-                    <h4>+ ABOUT</h4>
-                    <p>
-                        코스메틱브랜드 <헤라>의 브랜드 컬러를 살려 심플한
-                        스타일로 <br />홈페이지 및 상세페이지를 구현했습니다.
-                    </p>
-                </div>
-                <div class="monitor2">
-                    <img src="img/monitor1.svg" />
-                    <div class="moni_2">
-                        <p>소요시간: 4h</p>
-                        <p>작업성격: 개인작업</p>
-                        <p>기여도: 100%</p>
-                    </div>
-                </div>
-            </section>
-            <section id="portfolio3">
-                <div class="por3">
-                    <h2>HERA<br />웹 디자인</h2>
-                    <h3>HERA web design</h3>
-                </div>
-                <div class="view3">
-                    <p><a href="">홈페이지 보러가기</a></p>
-                </div>
-                <div class="por3_1">
-                    <h4>+ USED PROGRAM</h4>
-                    <img src="img/psicon.png" />
-                    <img src="img/aiicon.png" />
-                    <img src="img/vscicon.png" />
-                    <h4>+ ABOUT</h4>
-                    <p>
-                        코스메틱브랜드 <헤라>의 브랜드 컬러를 살려 심플한
-                        스타일로 <br />홈페이지 및 상세페이지를 구현했습니다.
-                    </p>
-                </div>
-                <div class="monitor3">
-                    <img src="img/monitor1.svg" />
-                    <div class="moni_3">
-                        <p>소요시간: 4h</p>
-                        <p>작업성격: 개인작업</p>
-                        <p>기여도: 100%</p>
-                    </div>
-                </div>
-            </section>
-            <section id="illust">
-                <div class="slide">
-                    <ul class="panel">
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                    </ul>
-                </div>
-                <ul class="navi">
-                    <li class="on"></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </ul>
-                <p class="prev"><i class="fa-solid fa-chevron-left"></i></p>
-                <p class="next">
-                    <i class="fa-solid fa-chevron-right"></i>
-                </p>
-            </section>
+        <div class="view1">
+          <p><a href="">홈페이지 보러가기</a></p>
         </div>
-    </body>
+        <div class="por1_1">
+          <h4>+ USED PROGRAM</h4>
+          <img src="img/psicon.png" />
+          <img src="img/aiicon.png" />
+          <img src="img/vscicon.png" />
+          <h4>+ ABOUT</h4>
+          <p>
+            코스메틱브랜드 <헤라>의 브랜드 컬러를 살려 심플한 스타일로
+            <br />홈페이지 및 상세페이지를 구현했습니다.
+          </p>
+        </div>
+        <div class="monitor1">
+          <img src="img/monitor1.svg" />
+          <div class="moni_1">
+            <p>소요시간: 4h</p>
+            <p>작업성격: 개인작업</p>
+            <p>기여도: 100%</p>
+          </div>
+        </div>
+      </section>
+      <section id="portfolio2">
+        <div class="por2">
+          <h2>HERA<br />웹 디자인</h2>
+          <h3>HERA web design</h3>
+        </div>
+        <div class="view2">
+          <p><a href="">홈페이지 보러가기</a></p>
+        </div>
+        <div class="por2_1">
+          <h4>+ USED PROGRAM</h4>
+          <img src="img/psicon.png" />
+          <img src="img/aiicon.png" />
+          <img src="img/vscicon.png" />
+          <h4>+ ABOUT</h4>
+          <p>
+            코스메틱브랜드 <헤라>의 브랜드 컬러를 살려 심플한 스타일로
+            <br />홈페이지 및 상세페이지를 구현했습니다.
+          </p>
+        </div>
+        <div class="monitor2">
+          <img src="img/monitor1.svg" />
+          <div class="moni_2">
+            <p>소요시간: 4h</p>
+            <p>작업성격: 개인작업</p>
+            <p>기여도: 100%</p>
+          </div>
+        </div>
+      </section>
+      <section id="portfolio3">
+        <div class="por3">
+          <h2>HERA<br />웹 디자인</h2>
+          <h3>HERA web design</h3>
+        </div>
+        <div class="view3">
+          <p><a href="">홈페이지 보러가기</a></p>
+        </div>
+        <div class="por3_1">
+          <h4>+ USED PROGRAM</h4>
+          <img src="img/psicon.png" />
+          <img src="img/aiicon.png" />
+          <img src="img/vscicon.png" />
+          <h4>+ ABOUT</h4>
+          <p>
+            코스메틱브랜드 <헤라>의 브랜드 컬러를 살려 심플한 스타일로
+            <br />홈페이지 및 상세페이지를 구현했습니다.
+          </p>
+        </div>
+        <div class="monitor3">
+          <img src="img/monitor1.svg" />
+          <div class="moni_3">
+            <p>소요시간: 4h</p>
+            <p>작업성격: 개인작업</p>
+            <p>기여도: 100%</p>
+          </div>
+        </div>
+      </section>
+      <section id="illust">
+        <div class="slide">
+          <ul class="panel">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+        <ul class="navi">
+          <li class="on"></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+        <p class="prev"><i class="fa-solid fa-chevron-left"></i></p>
+        <p class="next">
+          <i class="fa-solid fa-chevron-right"></i>
+        </p>
+      </section>
+    </div>
+  </body>
 </html>
